--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="col-md-4">
                 <label>My ID: </label><br/>
-                <textarea id="myId" rows="8" cols="80" class="form-control"></textarea><br/>
+                <textarea id="yourId" rows="8" cols="80" class="form-control"></textarea><br/>
                 <label>Other ID: </label><br/>
                 <textarea id="otherId" rows="8" cols="80" class="form-control"></textarea><br/>
                 <button type="button" id="connect" class="btn btn-md btn-primary">Connect</button><br/><br/>
